<resources>
    <string name="app_name">theAmazonsGame</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">password</string>
    <string name="button_login">login</string>
    <string name="button_register">register</string>
    <string name="button_createNewGame">Create new game</string>
    <string name="button_findGame">find game</string>
    <string name="button_Enter">enter</string>
    <string name="TextView_enterCode">Enter game code:</string>
    <string name="Board_ContentDescription">game_board</string>

</resources>