<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivity_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/mainActivity_EditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivity_Title"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"

        android:layout_marginEnd="50dp"
        android:hint="@string/hint_email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/mainActivity_EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivity_EditTextEmail"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"

        android:layout_marginEnd="50dp"
        android:hint="@string/hint_password"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/mainActivity_LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivity_EditTextPassword"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"

        android:text="@string/button_login"
        android:textColor="@color/white"
        android:onClick="login"/>

    <Button
        android:id="@+id/mainActivity_RegisterButton"
        android:layout_below="@+id/mainActivity_LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="100dp"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:onClick="register"/>
</RelativeLayout>