<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menuActivity_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <Button
        android:id="@+id/menuActivity_CreateNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuActivity_Title"

        android:layout_marginTop="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"

        android:text="@string/button_createNewGame"

        android:onClick="createGame"
        />

    <Button
        android:id="@+id/menuActivity_FindGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuActivity_CreateNewGame"

        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"

        android:text="@string/button_findGame"

        android:onClick="findGame"
        />

</RelativeLayout>